mix.sass broken

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -1,7 +1,11 @@
+main{
+
+
+}
 .company-info {
-  width: 85%;
   display: flex;
   padding-top: 100px;
+
 
   .title-area {
     display: flex;
@@ -20,7 +24,7 @@
   }
 
   p {
-    padding-left: 100px;
+    padding-right: 100px;
     padding-top: 10px;
     font-size: $size1;
   }
@@ -30,11 +34,20 @@
 .pictures{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   width: 80%;
   padding: 100px 0 0 300px;
 
   img{
     width: 40%;
+  }
+  .options{
+  padding-left: 300px;
+  width: 100%;
+
+  }
+  .options-left{
+  width: 40%;
   }
 
 }
