--- a/components/_main.scss
+++ b/components/_main.scss
@@ -55,7 +55,7 @@ main{
 
 }
 .options{
-  margin: 100px auto 0;
+  margin: 100px auto 0 300px;
   width: 70%;
   display: flex;
 
@@ -83,17 +83,58 @@ main{
 background-image: url("../images/h2-img-2.jpg");
 background-size: 100%, cover;
 background-repeat:repeat-y;
-background-position: 0 200px;
+background-position: 0 150px;
 width: 100%;
-min-height: 500px;
+min-height: 600px;
 text-align: center;
 position: relative;
 img{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  cursor: pointer;
 }
 
+}
+.plans{
+  padding: 50px 0;
+  text-align: center;
+
+
+
+
+  .plan-1, .plan-2, .plan-3{
+
+    border-radius: 10px;
+    padding: 60px 30px 90px;
+    display: inline-block;
+    margin-left: 30px;
+    height: 400px;
+    width: 250px;
+    h2{
+      padding: 10px 0 30px;
+    }
+
+
+
+ul li{
+  list-style-type: none;
+  padding: 8px;
+}
+  }
+  .plan-1{
+    border: 1px solid #efca9e;
+  }
+  .plan-2{
+    border: 1px solid #e6f3f0;
+    background-color: #e6f3f0;
+
+
+  }
+  .plan-3{
+    border: 1px solid #ea9b82;
+
+  }
 }
 
 
