css raw complete

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -99,6 +99,9 @@ img{
 .plans{
   padding: 50px 0;
   text-align: center;
+  background-image: url("../images/h2-background-img-03.png");
+  background-position: center;
+  background-size: cover;
 
 
 
