--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,10 +1,12 @@
 footer{
-  display: flex;
+
   .input-form{
     flex-basis: 70%;
     margin: 0 auto;
     display: flex;
+    flex-basis: 100%;
     justify-content: center;
+    padding: 80px;
 
     .f-left, .f-right{
       padding: 30px;
@@ -36,6 +38,19 @@ footer{
     input:first-child{
       display: block;
       width: 90%;
+    }
+  }
+  .socials-wrapper{
+    background-color: #E4EEED;
+    .socials{
+      background-image: url("../images/h2-footer-img-01.jpg");
+      background-size: 80% 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      text-align: center;
+      padding: 80px;
+      width: 80%;
+      margin: 0 auto;
     }
   }
 }
