--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -8,3 +8,9 @@ $size2: 14px;
 $size3: 18px;
 $size4: 32px;
 $size5: 40px;
+
+// MIXINS
+@mixin myFLex  {
+  display: flex;
+  align-items: center;
+  }
