--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,6 +1,5 @@
-footer{
-
-  .input-form{
+footer {
+  .input-form {
     flex-basis: 70%;
     margin: 0 auto;
     display: flex;
@@ -8,41 +7,54 @@ footer{
     justify-content: center;
     padding: 80px;
 
-    .f-left, .f-right{
+    .f-left,
+    .f-right {
       padding: 30px;
-
     }
   }
-  .f-left{
+
+  .f-left {
     text-align: justify;
     flex-basis: 40%;
-    h2{
+
+    h2 {
       font-size: $size5;
       padding-bottom: 25px;
     }
+
+    p {
+      font-size: $size1;
+    }
   }
-  .f-right{
 
-      input{
-        margin-bottom: 20px;
-        border: none;
-        border-bottom: 1px solid black;
-        width: 45%;
+  .f-right {
+    input {
+      margin-bottom: 20px;
+      border: none;
+      border-bottom: 1px solid black;
+      width: 45%;
+      font-size: $size1;
 
-        &:focus{
-          outline: none!important;
-
-        }
+      &:focus {
+        outline: none!important;
       }
+    }
 
-    input:first-child{
+    input:first-child {
       display: block;
       width: 90%;
     }
+
+    button {
+      @include myButton;
+      margin-top: 20px;
+    }
   }
-  .socials-wrapper{
+
+  .socials-wrapper {
     background-color: #E4EEED;
-    .socials{
+
+    .socials {
       background-image: url("../images/h2-footer-img-01.jpg");
       background-size: 80% 100%;
       background-repeat: no-repeat;
@@ -51,6 +63,89 @@ footer{
       padding: 80px;
       width: 80%;
       margin: 0 auto;
+
+      h3 {
+        font-size: $size3;
+      }
+
+      p {
+footer {
+  .input-form {
+    flex-basis: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+    padding: 80px;
+
+    .f-left,
+    .f-right {
+      padding: 30px;
+    }
+  }
+
+  .f-left {
+    text-align: justify;
+    flex-basis: 40%;
+
+    h2 {
+      font-size: $size5;
+      padding-bottom: 25px;
+    }
+
+    p {
+      font-size: $size1;
+    }
+  }
+
+  .f-right {
+    input {
+      margin-bottom: 20px;
+      border: none;
+      border-bottom: 1px solid black;
+      width: 45%;
+      font-size: $size1;
+
+      &:focus {
+        outline: none!important;
+      }
+    }
+
+    input:first-child {
+      display: block;
+      width: 90%;
+    }
+
+    button {
+      @include myButton;
+      margin-top: 20px;
+    }
+  }
+
+  .socials-wrapper {
+    background-color: #E4EEED;
+
+    .socials {
+      background-image: url("../images/h2-footer-img-01.jpg");
+      background-size: 80% 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      text-align: center;
+      padding: 80px;
+      width: 80%;
+      margin: 0 auto;
+
+      h3 {
+        font-size: $size3;
+      }
+
+      p {
+        font-size: $size1;
+      }
+    }
+  }
+}        font-size: $size1;
+      }
     }
   }
 }
