--- a/components/_header.scss
+++ b/components/_header.scss
@@ -1,20 +1,24 @@
-header{
+header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  img{
+
+  img {
     height: 15px;
     cursor: pointer;
   }
-  ul li{
+
+  ul li {
     display: inline-block;
     padding-left: 15px;
-    a{
+
+    a {
       text-decoration: none;
       color: #000;
+      font-size: $size2;
 
-      &:hover{
+      &:hover {
         border-bottom: 2px solid #EA9B82;
       }
     }
