--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -17,9 +17,10 @@ $size6: 40px;
   }
 @mixin myButton{
   border: 1px solid #80abae;
-  border-radius: 35%;
+  border-radius: 16px;
   background-color: transparent;
-  padding: 12px 36px;
+  padding: 10px 20px;
+  cursor: pointer;
   }
 
 // COLORS
