--- a/components/_header.scss
+++ b/components/_header.scss
@@ -19,7 +19,7 @@ header {
 
     a {
       text-decoration: none;
-      color: #000;
+      color: #1a706a;
       font-size: $size2;
 
       &:hover {
