--- a/components/_main.scss
+++ b/components/_main.scss
@@ -39,6 +39,7 @@ main{
     padding-top: 10px;
     font-size: $size1;
     font-weight: 400;
+    color: #6d6e71;
   }
 }
 
@@ -132,6 +133,8 @@ main{
     p{
       font-size: $size2;
       padding-top: 20px;
+      color: #6d6e71;
+
 
     }
     button{
@@ -200,7 +203,7 @@ img{
     height: 400px;
     width: 250px;
     color: #1a706a;
-    
+
     h2{
       padding: 10px 0 30px;
       font-size: $size4;
@@ -215,6 +218,8 @@ ul li{
   list-style-type: none;
   padding: 8px;
   font-size: $size1;
+  color: #6d6e71;
+
 }
 button{
   @include myButton;
